@@ -1,3 +1,6 @@
+2011-11-14 tatuya
+* Add the trigger to call Immobilisation_edit when the workflow state is changed. Because it is possible changing state without properties editing.
+
 2011-04-04 Kazuhiko
 * configure searchable text property ids for Amortisation Transaction.
 
